syntax = "proto3";

package graph;

import "node.proto";
import "edge.proto";

option go_package = ".";

message GraphResponse {
  repeated Node nodes = 1;
  repeated Edge edges = 2;
}